apps/base/riven/riven-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: riven-frontend-ingress
  namespace: media
  annotations:
    gethomepage.dev/href: "https://riven.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Riven"
    gethomepage.dev/description: "Media management and streaming integrated with various media servers and third-party services"
    gethomepage.dev/app: riven
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/riven.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`riven.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: riven-frontend
          port: 3000
      # middlewares:
      #   - name: authentik
      #     namespace: authentik
  tls: {}
